feat(fiscal): enable CFOP table management
